<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frgen21_ros2</name>
  <version>1.2.2</version>
  <description>ROS 2 driver for ZF FRGen21 Imaging Radar</description>
  <maintainer email="yannik.motzet@zf.com">Yannik Motzet</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>frgen21_msgs</depend>
  <depend>frgen21_driver</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ros2launch</exec_depend>
  
</package>
